--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -17,6 +17,18 @@ small {
   margin-bottom: 15px;
 }
 
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff5;
+}
+
 .text-center {
   text-align: center;
 }
