--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -26,7 +26,7 @@ small {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #fff5;
+  background: #fff;
 }
 
 .text-center {
