--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300;1,400&display=swap');
 
 body {
+  margin: 0;
   font-family: 'Lato', sans-serif;
   font-size: 16px;
 }
