--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -18,9 +18,13 @@ small {
   margin-bottom: 15px;
 }
 
+menu {
+  margin: 0;
+  padding: 0;
+}
+
 .page {
-  width: 100%;
-  padding: 5px;
+  margin: 5px;
 }
 
 .loader-container {
@@ -85,6 +89,11 @@ small {
   }
 }
 
-.middle {
+.middle-section {
   display: flex;
+}
+
+.content {
+  width: 100%;
+  margin: 10px;
 }
