--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -20,6 +20,10 @@ $menuHeight: 50px;
     display: flex;
     justify-items: flex-end;
   }
+
+  .menu-item:hover .menu-text {
+    color: #fff9;
+  }
 }
 
 .side-menu {
@@ -31,6 +35,10 @@ $menuHeight: 50px;
   .menu-item {
     margin-left: 15px;
     margin-top: 15px;
+  }
+
+  .menu-item:hover .menu-text {
+    color: #0009;
   }
 }
 
@@ -49,10 +57,6 @@ $menuHeight: 50px;
     display: flex;
     font-size: 15px;
     cursor: pointer;
-  }
-
-  .menu-item:hover .menu-text {
-    color: #0009;
   }
 }
 
