--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -7,7 +7,7 @@
   }
 
   input {
-    width: calc(100% - 22px);
+    width: 100%;
     padding: 5px 10px;
     border: 1px solid #0003;
     border-radius: 3px;
