fixed unauth routing, fixed mobile side menu

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -152,6 +152,8 @@ menu {
 .date-picker {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
   width: 100%;
   max-width: 420px;
 }
