added recipies list scratch

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -41,6 +41,11 @@ $menuHeight: 50px;
     margin-top: 15px;
   }
 
+  .divider {
+    margin-right: 15px;
+    border-bottom: 1px solid #999;
+  }
+
   .menu-text {
     position: absolute;
     left: 25px;
