fixed loading problems

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -142,3 +142,12 @@ menu {
   width: 70px;
   font-size: 14px;
 }
+
+.cke-name {
+  margin-top: 15px;
+  margin-bottom: .5rem;
+}
+
+.ck-editor__editable {
+  min-height: 400px;
+}
