--- a/src/scss/exam.scss
+++ b/src/scss/exam.scss
@@ -24,6 +24,14 @@
   cursor: pointer;
 }
 
+.question--option.--valid {
+  background: #28a745;
+}
+
+.question--option.--invalid {
+  background: #dc3545;
+}
+
 .question--option:hover {
   background: #eee;
 }
