--- a/src/scss/exam.scss
+++ b/src/scss/exam.scss
@@ -4,7 +4,9 @@ $neutralColor: #ebe9e7;
 $hoverColor: #eee;
 
 .exam-container {
-  margin: 20px 15px;
+  width: 730px;
+  margin: 30px auto;
+  padding: 15px
 }
 
 .exam {
@@ -12,8 +14,6 @@ $hoverColor: #eee;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 1100px;
-  margin: 30px auto;
 }
 
 .question {
@@ -67,4 +67,18 @@ $hoverColor: #eee;
 .finish-button {
   margin-top: 30px;
   width: 200px;
+}
+
+.exam--top {
+  display: flex;
+  justify-content: space-between;
+  width: 600px;
+  margin-top: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #666;
+}
+
+.summary-box {
+  font-size: 22px;
+  text-align: center;
 }
