--- a/src/scss/exam.scss
+++ b/src/scss/exam.scss
@@ -78,6 +78,10 @@ $hoverColor: #eee;
   border-bottom: 1px solid #666;
 }
 
+.exam--top.--center {
+  justify-content: center;
+}
+
 .summary-box {
   font-size: 22px;
   text-align: center;
