--- a/src/scss/exam.scss
+++ b/src/scss/exam.scss
@@ -87,3 +87,9 @@ $borderColor: #999;
   font-size: 22px;
   text-align: center;
 }
+
+.create-exam-form ol {
+  margin-top: 10px;
+  margin-left: 0;
+  padding-left: 20px;
+}
