moved context to PrivateLayout component

--- a/src/scss/exam.scss
+++ b/src/scss/exam.scss
@@ -88,7 +88,7 @@ $borderColor: #999;
   text-align: center;
 }
 
-.create-exam-form ol {
+.exam-form ol {
   margin-top: 10px;
   margin-left: 0;
   padding-left: 20px;
