--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -164,6 +164,6 @@ menu {
   margin-left: 10px;
 }
 
-.top__action-buttons .btn:last-of-type {
+.top__action-buttons .btn:first-of-type {
   margin-left: 0;
 }
