--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -171,3 +171,20 @@ menu {
     margin-left: 0;
   }
 }
+
+.item-with-action {
+  display: flex;
+  justify-content: space-between;
+}
+
+.exam-questions {
+  margin-top: 30px;
+
+  .async-select {
+    max-width: 300px;
+  }
+
+  .create-question-box {
+    margin-top: 15px;
+  }
+}
