--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -177,14 +177,6 @@ menu {
   justify-content: space-between;
 }
 
-.exam-questions {
-  margin-top: 30px;
-
-  .async-select {
-    max-width: 300px;
-  }
-
-  .create-question-box {
-    margin-top: 15px;
-  }
+.navigation {
+  margin-bottom: 15px;
 }
