--- a/src/scss/exam.scss
+++ b/src/scss/exam.scss
@@ -20,6 +20,10 @@ $borderColor: #999;
 .question {
   width: 600px;
   margin-top: 60px;
+
+  h4 {
+    font-size: 18px;
+  }
 }
 
 .question--query {
