--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -15,11 +15,7 @@ h1 {
 }
 
 h3 {
-  margin-bottom: 30px;
-}
-
-h4, .h4 {
-  font-size: 18px;
+  margin-bottom: 15px;
 }
 
 small {
@@ -98,7 +94,7 @@ menu {
 }
 
 .entry-list {
-  margin-top: 30px
+  margin-top: 15px
 }
 
 .date-picker {
@@ -159,6 +155,10 @@ menu {
   align-items: baseline;
   flex-wrap: wrap-reverse;
   gap: 15px;
+
+  h3 {
+    margin-bottom: 30px;
+  }
 }
 
 .top__action-buttons {
