added exam history list

--- a/src/scss/exam.scss
+++ b/src/scss/exam.scss
@@ -24,6 +24,11 @@ $borderColor: #999;
   h4 {
     font-size: 18px;
   }
+
+  p {
+    display: inline;
+    margin-bottom: 5px;
+  }
 }
 
 .question--query {
