--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -184,3 +184,31 @@ menu {
 .table-list {
   margin-top: 15px;
 }
+
+.filters-btn-row {
+  display: flex;
+  width: 300px;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.filters-row {
+  display: flex;
+  gap: 10px;
+
+  .input-group {
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    margin: 0 0 10px;
+  }
+
+  label {
+    margin-bottom: 10px;
+  }
+
+  input {
+    width: 130px;
+    height: 38px;
+  }
+}
