--- a/src/scss/exam.scss
+++ b/src/scss/exam.scss
@@ -5,7 +5,8 @@ $hoverColor: #eee;
 $borderColor: #999;
 
 .exam-container {
-  width: 730px;
+  width: 100%;
+  max-width: 730px;
   margin: 30px auto;
   padding: 15px
 }
@@ -18,7 +19,8 @@ $borderColor: #999;
 }
 
 .question {
-  width: 600px;
+  max-width: 600px;
+  width: 100%;
   margin-top: 60px;
 
   h4 {
@@ -82,7 +84,8 @@ $borderColor: #999;
 .exam--top {
   display: flex;
   justify-content: space-between;
-  width: 600px;
+  max-width: 600px;
+  width: 100%;
   margin-top: 20px;
   padding-bottom: 10px;
   border-bottom: 1px solid $borderColor;
